--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@ canvas.mainDisplay {
     flex-basis: 80vh;
     min-height: 0;
 
+    margin-left: auto;
+    margin-right: auto;
     aspect-ratio: 1;
 }
 </style>
