--- a/index.html
+++ b/index.html
@@ -46,12 +46,15 @@ body {
 canvas.mainDisplay {
     flex-grow: 1;
     flex-shrink: 1;
+    touch-action: none;
 
     flex-basis: 80vh;
     min-height: 0;
 
     margin-left: auto;
     margin-right: auto;
+    display: inline-block;
+
     aspect-ratio: 1;
 }
 </style>
