Additional options for rendering

--- a/index.html
+++ b/index.html
@@ -48,12 +48,16 @@ canvas.mainDisplay {
     flex-shrink: 1;
     touch-action: none;
 
+    tab-index: 0;
+
     flex-basis: 80vh;
     min-height: 0;
 
     margin-left: auto;
     margin-right: auto;
     display: inline-block;
+
+    background-color: #eeffff;
 
     aspect-ratio: 1;
 }
